# LemoGUI

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
example/: container.rs  global_setting.rs  rectangle_T_draw.rs  show_button.rs  show_shape.rs  test_font.rs  test_graph_algo.rs
example/glow_test/: test_glow.rs
example/proto/: test_algo.rs  test_alter_message.rs  test_closure.rs
shader_c/: circle.frag  circle.vert  circle.wgsl  font.frag  font.frag.spv  font.vert  font.vert.spv  image.vert  image.wgsl  polygon.frag  polygon.vert  round_rect.frag  round_rect.frag.spv  round_rect.vert  round_rect.vert.spv  round_rect.wgsl  text.wgsl  triangle.vert  triangle.wgsl
src/: adapter.rs  device.rs  graphic.rs  lib.rs  widget.rs
src/backend/: bufferState.rs  buffer_state.rs  button.rs  event_winit_impl.rs  font.rs  global_setting.rs  globeSetting.rs  globe_setting.rs  mod.rs  mywgpu.rs  pipeline.rs  pipeline_state.rs  render.rs  shader.rs  shape.rs  style.rs  texture_state.rs
src/backend/glow_impl/: gl_context.rs  mod.rs  pipeline.rs  render_utils.rs  shader.rs  vertex_buffer.rs
src/backend/glow_impl/shader/: circle.vert  round_rect.frag  round_rect.vert  triangle.frag  triangle.vert
src/backend/sdl2_impl/: event_context.rs  event_type_transfer.rs  mod.rs
src/backend/wgpu_impl/: mod.rs  pipeline_state.rs  render_utils.rs  shape_transfer.rs  shape_vertex_layout.rs  texture.rs  texture_vertex_layout.rs  vertex_buffer.rs  vertex_buffer_layout.rs  wgpu_context.rs
src/backend/wgpu_impl/shader/: image.wgsl  triangle.wgsl
src/backend/winit_impl/: event_context.rs  event_type_transfer.rs  mod.rs
src/device/: container.rs  display_window.rs  event_context.rs  listener.rs  mod.rs  painter.rs  wgpu_context.rs
src/event/: event.rs  event_context.rs  mod.rs
src/graphic/: base.rs  font.rs  mod.rs  render_api.rs  render_middle.rs  render_type.rs  shader.rs  shape.rs  style.rs
src/graphic/base/: circle_vertex.rs  color.rs  font.rs  image.rs  image2d.rs  image_vertex.rs  images.rs  mod.rs  point2d.rs  poly_vertex.rs  rect_vertex.rs  rectangle.rs  shape.rs  shape_vertex.rs  triangle_vertex.rs
src/graphic/render_middle/: circle_vertex.rs  image_vertex.rs  mod.rs  pipeline_state.rs  poly_vertex.rs  rect_vertex.rs  render_function.rs  shader.rs  texture.rs  texture_buffer.rs  transfer_vertex.rs  triangle_vertex.rs  vertex_buffer.rs  vertex_buffer_layout.rs
src/graphic/render_type/: buffer_state.rs  pipeline_state.rs  render_function.rs  texture_buffer.rs  texture_state.rs  transfer_vertex.rs  vertex_buffer.rs  vertex_buffer_layout.rs
src/graphic/shape/: point.rs  point2d.rs  rectangle.rs  round_rect.rs  round_rectangle.rs  text.rs  texture2d.rs  texture_point.rs  triangle.rs
src/model/: button.rs  component.rs
src/widget/: button.rs  component.rs  container.rs  drawing_board.rs  event.rs  event_context.rs  frame.rs  instance.rs  label.rs  listener.rs  message.rs  mod.rs  panel.rs  text_input.rs
