[package]
name = "lemo_gui"
version = "0.0.1"
authors = ["eaglekindoms <huyongmao35@outlook.com>"]
edition = "2021"
description = "GUI library dependent on wgpu"
license = "MIT"
keywords = ["graphics", "gui"]
repository = "https://github.com/eaglekindoms/LemoGUI"
resolver = "2"

[[example]]
name = "show_button"
path = "example/show_button.rs"

[[example]]
name = "show_shap"
path = "example/show_shape.rs"

[[example]]
name = "test_graph_algo"
path = "example/proto/test_algo.rs"

[[example]]
name = "test_glow"
path = "example/glow_test/test_glow.rs"

[dependencies]
wgpu = { version = "0.12", features = ["spirv"] }
async-trait = "0.1.51"
winit = "0.26.0"
futures = "0.3.10"
cgmath = "0.18"
log = "0.4.14"
simple_logger = "1.11.0"
rand = "0.8.2"
bytemuck = { version = "1.4", features = ["derive"] }
image = "0.23.12"
ab_glyph = "0.2.11"
raw-window-handle = "0.4.2"
glow = "0.11.2"
glutin = "0.28.0"

[dependencies.sdl2]
#git = "https://github.com/Rust-SDL2/rust-sdl2"
version = "0.35"
features = ["raw-window-handle", "bundled"]

[features]
wgpu_impl = []
glow_impl = []
winit_impl = []
sdl2_impl = []
default = ["wgpu_impl", "winit_impl"]